Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_Next_Week__c/Weekly_Report_Data_Next_Week__c.object-meta.xml
<CustomObject>
    <label>Next Week (My Activities)</label>
    <nameField>
        <displayFormat>WRDNW-{YYYY}{MM}-{00000}</displayFormat>
        <label>Weekly Report Data#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Next Week (My Activities)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>