Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_Next_Week__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Weekly_Report_Data_Next_Week</relationshipName>
    <type>Lookup</type>
</CustomField>