Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_Next_Week__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Next_Week_My_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>