Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_Next_Week__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>