Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_Next_Week__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; CreatedById , CreatedBy.FirstName + &apos; &apos; +CreatedBy.LastName, &apos;UserDetail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>