Reetan.Nayak Dev 25/force-app/main/default/objects/Weekly_Report_Data_Next_Week__c/fields/Work_Comment__c.field-meta.xml
<CustomField>
    <fullName>Work_Comment__c</fullName>
    <label>Work Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>